[project]
name = "blah"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tox>=4.26.0",
    "pytest>=8.4.0",
]


[tool.tox]
env_list = [
    "py39"
]

[tool.tox.env_run_base]
# setenv = { TESTENV = "{env:TESTENV:hello}" }
commands = [[
    "pytest", "-vvvs",
    {replace = "posargs", default = [], extend = true},
]]

[tool.tox.env.py39]
base = ["env_run_base"]
description = "pytest on minimum dependency versions"
